# octree

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ideas.md  octreelayout.md
assets/: 8x8x8.vox  box.vox
assets/models/: 8x8x8.vox  box.vox  colors.vox  cube_chunk.vox  menger.vox  single_cube.vox  small_cube.vox
assets/models/hand/: hand.mtl
assets/shaders/: compute.glsl  cube.frag  cube.vert  duck.frag  duck.vert  quad.frag  quad.vert  raytrace.frag  shader.frag  shader.vert  wireframe.frag  wireframe.geo  wireframe.vert
include/: dirent.h
include/core/: chunk.h
include/core/files/: vox_file.h
include/graphics/: buffer.h  shader.h  uniform.h  vertex_array.h  vertex_attribute_distriptor.h
include/math/: transform.h
include/octree/: camera.h  load_obj.h  octree.h  octree_builder.h  octree_chunk.h  voxel_data.h
include/octree/core/: isystem.h
include/octree/drawables/: axis_drawable.h  branch_mesh.h  compute_drawable.h  drawable.h  fsq_drawable.h  leaf_mesh.h  mesh_drawable.h  voxel_mesh.h
include/octree/graphics/: buffer.h  gl_defines.h  gl_functions.h  gl_lite.h  graphics_ctx.h  shader.h  uniform.h  vertex_attribute_distriptor.h  vertex_buffer.h  vertex_element_array.h
include/octree/math/: math.h  octree_math.h  quaternion.h  vec2.h  vec3.h  vec3int.h  vec4.h
include/octree/systems/: window.h
include/systems/: window.h
shaders/: shader.frag  shader.vert
src/: camera.h  defines.h  gl_defines.h  gl_lite.h  load_obj.cpp  main.cpp  mat4.cpp  mat4.h  math.h  octree.cpp  octree.h  octree_builder.cpp  octree_chunk.cpp  octree_chunk.h  quaternion.cpp  quaternion.h  raytrace_test.cpp  shader.cpp  shader.h  tests.cpp  transform.cpp  transform.h  vec3.h
src/containers/: singleton.h
src/core/files/: filesystem.cpp  vox_file.cpp
src/drawables/: axis_drawable.cpp  branch_mesh.cpp  fsq_drawable.cpp  mesh_drawable.cpp  voxel_mesh.cpp
src/file/: vox_file.cpp  vox_file.h
src/files/: filesystem.cpp  vox_file.cpp  vox_file.h
src/graphics/: buffer.h  element_buffer.h  gl_defines.h  gl_lite.h  graphics_ctx.cpp  shader.cpp  shader.h  uniform.h  vertex_attribute_distriptor.h
src/math/: mat4.cpp  mat4.h  math.cpp  math.h  quaternion.cpp  quaternion.h  transform.cpp  vec3.cpp  vec3.h  vec3int.cpp  vec3int.h
src/systems/: system.h  window.cpp  window.h
(+2 files in other folders)
